fix: titles horizontal alignment on small devices

--- a/src/styles/HeroSection.css
+++ b/src/styles/HeroSection.css
@@ -85,12 +85,12 @@
 /* Molto basso: fino a 600px altezza */
 @media (max-height: 600px) and (max-width:600px) {
   .wedding-title {
-    margin: 23vh auto 0 auto;
+    margin: 15vh auto 0 auto;
     font-size: 2.7em;
   }
 
   .wedding-subsection {
-    margin: 5vh auto 0 auto;
+    margin: 3vh auto 0 auto;
   }
 }
 
@@ -102,7 +102,7 @@
   }
 
   .wedding-subsection {
-    margin: 6vh auto 0 auto;
+    margin: 3.5vh auto 0 auto;
   }
 }
 
